syntax = "proto3";

package user;

option go_package = "proto/user";

// User message definition
message User {
    string id = 1;
    string name = 2;
    string last_name = 3;
    uint32 age = 4;
}

// Request message for getting by ID
message GetByIdRequest {
    string id = 1;
}

// Request message for getting all users with optional filters
message GetAllUsersRequest {
    string name = 1;        // Optional filter
    string last_name = 2;   // Optional filter
    uint32 age = 3;         // Optional filter
}

// Response message for returning multiple users
message GetAllUsersResponse {
    repeated User users = 1;
}

// Response message for returning a single user
message GetUserByIdResponse {
    User user = 1;
}

// Service definition for User
service UserService {
    // Get all users with optional filters
    rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);

    // Get user by ID
    rpc GetUserById(GetByIdRequest) returns (GetUserByIdResponse);
}
